--- a/ListOfMovies/ListOfMovies/Storyboards/Base.lproj/Main.storyboard
+++ b/ListOfMovies/ListOfMovies/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ListOfMovies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fty-rV-uIB">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="271"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oIC-Su-09G">
+                                        <rect key="frame" x="16" y="90" width="382" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H03-EZ-pWJ">
+                                        <rect key="frame" x="16" y="140" width="382" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHP-SN-DXD">
+                                        <rect key="frame" x="165.5" y="208" width="83" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="31" id="3Mh-6A-Abn"/>
+                                        </constraints>
+                                        <color key="tintColor" red="1.5848889233893715e-05" green="0.99613028764724731" blue="0.16470587253570557" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Add">
+                                            <color key="baseForegroundColor" systemColor="linkColor"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="addButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f6K-Lk-ZN5"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="271" id="ID1-2l-6Ts"/>
+                                    <constraint firstItem="H03-EZ-pWJ" firstAttribute="leading" secondItem="fty-rV-uIB" secondAttribute="leading" constant="16" id="LFE-Gs-9KY"/>
+                                    <constraint firstItem="oIC-Su-09G" firstAttribute="leading" secondItem="fty-rV-uIB" secondAttribute="leading" constant="16" id="PrH-Ex-wCA"/>
+                                    <constraint firstItem="yHP-SN-DXD" firstAttribute="top" secondItem="H03-EZ-pWJ" secondAttribute="bottom" constant="34" id="SLS-0x-GGY"/>
+                                    <constraint firstItem="yHP-SN-DXD" firstAttribute="centerX" secondItem="fty-rV-uIB" secondAttribute="centerX" id="iAj-bt-ST0"/>
+                                    <constraint firstAttribute="trailing" secondItem="H03-EZ-pWJ" secondAttribute="trailing" constant="16" id="iMl-n0-dpU"/>
+                                    <constraint firstAttribute="trailing" secondItem="oIC-Su-09G" secondAttribute="trailing" constant="16" id="kPs-g0-Xy8"/>
+                                    <constraint firstItem="H03-EZ-pWJ" firstAttribute="top" secondItem="oIC-Su-09G" secondAttribute="bottom" constant="16" id="q2D-tx-2uC"/>
+                                    <constraint firstItem="oIC-Su-09G" firstAttribute="top" secondItem="fty-rV-uIB" secondAttribute="top" constant="90" id="zsy-fR-id7"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="td6-fu-f2Y">
+                                <rect key="frame" x="0.0" y="271" width="414" height="591"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="DWi-R9-pOI"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cut-ms-RyT"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="td6-fu-f2Y" secondAttribute="trailing" id="180-pK-9OZ"/>
+                            <constraint firstItem="fty-rV-uIB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BIP-t6-jhn"/>
+                            <constraint firstItem="fty-rV-uIB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="FWr-dx-pkV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="td6-fu-f2Y" secondAttribute="bottom" id="NKB-qb-nq1"/>
+                            <constraint firstItem="yHP-SN-DXD" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="XRA-we-pfS"/>
+                            <constraint firstItem="td6-fu-f2Y" firstAttribute="top" secondItem="fty-rV-uIB" secondAttribute="bottom" id="gt2-h5-pEz"/>
+                            <constraint firstItem="td6-fu-f2Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="k4q-rA-2Ze"/>
+                            <constraint firstItem="fty-rV-uIB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="vfK-W5-zE9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mainTableView" destination="td6-fu-f2Y" id="4hM-JU-3N9"/>
+                        <outlet property="movieTitleField" destination="oIC-Su-09G" id="wdG-e3-TDy"/>
+                        <outlet property="movieYearField" destination="H03-EZ-pWJ" id="Vgx-Qs-CvA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="97.767857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
