- .reloadData() replaced with UITableViewDiffableDataSource - dups are restricted because of model (Hashable, so they are being checked)

--- a/ListOfMovies/ListOfMovies/Storyboards/Base.lproj/Main.storyboard
+++ b/ListOfMovies/ListOfMovies/Storyboards/Base.lproj/Main.storyboard
@@ -57,13 +57,9 @@
                                     <constraint firstItem="oIC-Su-09G" firstAttribute="top" secondItem="fty-rV-uIB" secondAttribute="top" constant="90" id="zsy-fR-id7"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="td6-fu-f2Y">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="td6-fu-f2Y">
                                 <rect key="frame" x="0.0" y="271" width="414" height="591"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="DWi-R9-pOI"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cut-ms-RyT"/>
-                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
