--- a/ListOfMovies/ListOfMovies/MainScene/UIComponents/CustomTableViewCell.xib
+++ b/ListOfMovies/ListOfMovies/MainScene/UIComponents/CustomTableViewCell.xib
@@ -10,24 +10,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="154" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="ListOfMovies" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="154"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Huge movie title so I can write a long one" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3AN-6F-OhK">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="320" id="YFV-RW-oa8"/>
-                            <constraint firstAttribute="height" constant="114" id="fHB-ds-Itm"/>
+                            <constraint firstAttribute="height" constant="114" id="3Hq-U5-iNg"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9E-ck-FCh">
-                        <rect key="frame" x="262" y="114" width="42" height="29"/>
+                        <rect key="frame" x="262" y="114" width="42" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="42" id="vec-b3-8Js"/>
                         </constraints>
